--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
                 <ul class="nav">
                     <li class="el-nav"><a href="index.html">home</a></li>
                     <li class="el-nav"><a class="active" href="about.html">about</a></li>
-                    <li class="el-nav"><a href="">portfolio</a></li>
+                    <li class="el-nav"><a href="portfolio.html">portfolio</a></li>
                     <li class="el-nav"><a href="">blog</a></li>
                     <li class="el-nav"><a href="">contact</a></li>
                     <li class="el-nav"><a href=""><i class="fa fa-search" aria-hidden="true"></i></a></li>
@@ -47,7 +47,7 @@
                     <ul class="mobile-nav">
                         <li class="mobile-el-nav"><a href="index.html">home</a></li>
                         <li class="mobile-el-nav"><a class="active" href="about.html">about</a></li>
-                        <li class="mobile-el-nav"><a href="">portfolio</a></li>
+                        <li class="mobile-el-nav"><a href="portfolio.html">portfolio</a></li>
                         <li class="mobile-el-nav"><a href="">blog</a></li>
                         <li class="mobile-el-nav"><a href="">contact</a></li>
                         <li class="mobile-el-nav"><a href=""><i class="fa fa-search" aria-hidden="true"></i></a></li>
