--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <ul class="nav">
                     <li class="el-nav"><a class="active" href="index.html">home</a></li>
                     <li class="el-nav"><a href="about.html">about</a></li>
-                    <li class="el-nav"><a href="">portfolio</a></li>
+                    <li class="el-nav"><a href="portfolio.html">portfolio</a></li>
                     <li class="el-nav"><a href="">blog</a></li>
                     <li class="el-nav"><a href="">contact</a></li>
                     <li class="el-nav"><a href=""><i class="fa fa-search" aria-hidden="true"></i></a></li>
@@ -49,7 +49,7 @@
                     <ul class="mobile-nav">
                         <li class="mobile-el-nav"><a class="active" href="index.html">home</a></li>
                         <li class="mobile-el-nav"><a href="about.html">about</a></li>
-                        <li class="mobile-el-nav"><a href="">portfolio</a></li>
+                        <li class="mobile-el-nav"><a href="portfolio.html">portfolio</a></li>
                         <li class="mobile-el-nav"><a href="">blog</a></li>
                         <li class="mobile-el-nav"><a href="">contact</a></li>
                         <li class="mobile-el-nav"><a href=""><i class="fa fa-search" aria-hidden="true"></i></a></li>
